# Cling

./: .env.example  .eslintrc.cjs  .gitignore  BETA_RELEASE_PACKAGE.md  BETA_SIGNUP_TEMPLATE.md  BETA_TESTING.md  README.md  ROADMAP.md  SETUP.md  build-beta.bat  build-beta.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
beta-releases/: Cling-Beta-macOS-AppleSilicon.dmg  Cling-Beta-macOS-Intel.dmg
beta-releases/Cling.app/Contents/: Info.plist
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/sql/migrations/: 0001_init.sql  0002_indexes.sql  0003_triggers.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: migrate.rs  mod.rs  seed.rs
src-tauri/src/ipc/: attachments.rs  calendar.rs  comments.rs  focus.rs  habits.rs  lists.rs  mod.rs  tags.rs  tasks.rs
src-tauri/src/os/: global_shortcuts.rs  menubar.rs  mod.rs  notifications.rs  protocol.rs  shortcuts.rs  tray.rs
src-tauri/src/sync/: conflict.rs  mod.rs  pull.rs  push.rs
src/app/db/: schema.ts  seed.ts
src/app/hooks/: useURLSchemes.ts
src/app/routes/: Calendar.tsx  Dashboard.tsx  Focus.tsx  Habits.tsx  Kanban.tsx  List.tsx  Profile.tsx  Settings.tsx  Timeline.tsx  Today.tsx
src/app/store/: useAuth.ts  useData.ts  useUI.ts
src/hooks/: useTheme.ts
src/lib/: date.ts  env.ts  ipc.ts  parse.ts  queryClient.ts  supabase.ts  theme.ts
src/lib/__tests__/: date.test.ts  parse.test.ts
supabase/: README.md  policies.sql
supabase/migrations/: .keep
(+16 files in other folders)
